--- a/chatrabash.server/Application/Application.csproj
+++ b/chatrabash.server/Application/Application.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Persistence\Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.2" />
+  </ItemGroup>
+
 </Project>
