--- a/chatrabash.server/API/appsettings.json
+++ b/chatrabash.server/API/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection" : "Data source=Chatrabash.db"
+  }
 }
